ui about to finish

--- a/app/src/main/res/layout/activity_login__screen.xml
+++ b/app/src/main/res/layout/activity_login__screen.xml
@@ -39,52 +39,52 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.95">
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Email"
             app:hintTextColor="@color/colorAccent">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorEditTextLight"
-                android:textColor="@color/colorTextLight"
                 android:inputType="textEmailAddress"
-                />
+                android:textColor="@color/colorTextLight" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/til_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
-            app:hintTextColor="@color/colorAccent"
             android:layout_marginTop="15dp"
-            app:endIconMode="password_toggle">
+            android:hint="Password"
+            app:endIconMode="password_toggle"
+            app:hintTextColor="@color/colorAccent">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorEditTextLight"
-                android:textColor="@color/colorTextLight"
                 android:inputType="textPassword"
-                />
+                android:textColor="@color/colorTextLight" />
         </com.google.android.material.textfield.TextInputLayout>
-
-
 
         <Button
             android:id="@+id/btn_Login"
-            style="@style/btn_black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="25dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="15dp"
             android:text="Login"
             android:textAllCaps="false"
-            android:textSize="20dp"
-            app:background="@drawable/btn_black_background"
-            app:backgroundTint="@color/colorBackground" />
+            android:textColor="@color/colorTextLight"
+            app:backgroundTint="@color/colorBackground"
+            app:cornerRadius="20dp"
+            app:strokeColor="@color/colorTextLight"
+            />
+
 
 
         <TextView
