--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -39,47 +39,44 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.95">
+        <Button
+            android:id="@+id/btn_google"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="25dp"
+            android:drawableLeft="@drawable/ic_group_90"
+            android:text="Continue with Google"
+            android:textAllCaps="false"
+            android:textColor="@color/colorBackground"
+            app:backgroundTint="@color/colorWhite"
+            app:cornerRadius="20dp"/>
 
         <Button
             android:id="@+id/btn_phone"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="25dp"
             android:drawableLeft="@drawable/ic_phone"
             android:text="Continue with Phone"
             android:textAllCaps="false"
             android:textColor="@color/colorBackground"
+            app:backgroundTint="@color/colorWhite"
+            app:cornerRadius="20dp"/>
 
-            android:background="@drawable/btn_white_background"
-
-            />
-
-        <Button
-            android:id="@+id/btn_google"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="20dp"
-            android:drawableLeft="@drawable/ic_group_90"
-            android:text="Continue with Google"
-            android:textAllCaps="false"
-            android:textColor="@color/colorBackground"
-            android:background="@drawable/btn_white_background"
-
-            />
 
         <Button
             android:id="@+id/btn_login"
-            style="@style/btn_black"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="25dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="30dp"
             android:text="Login"
             android:textAllCaps="false"
-            android:textSize="20dp"
-            app:background="@drawable/btn_black_background"
-            app:backgroundTint="@color/colorBackground" />
+            android:textColor="@color/colorTextLight"
+            app:backgroundTint="@color/colorBackground"
+            app:cornerRadius="20dp"
+            app:strokeColor="@color/colorTextLight"
+            app:strokeWidth="3dp"/>
 
 
         <TextView
@@ -90,7 +87,6 @@
             android:layout_marginTop="5dp"
             android:text="Don't have an account?"
             android:textColor="@color/colorWhite"
-
             android:textSize="15dp"
 
             />
