--- a/app/src/main/res/layout/fragment_doctor_appointment.xml
+++ b/app/src/main/res/layout/fragment_doctor_appointment.xml
@@ -1,12 +1,284 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.my_medical_records.doctor_appointment.DoctorAppointmentFragment">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+
+        <RelativeLayout
+            android:id="@+id/rl_header_doctor_appointment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorBackgroundLightBlue"
+            android:paddingBottom="30dp">
+
+            <TextView
+                android:id="@+id/tv_header_doctor_appointment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:text="Doctor \nAppointment"
+                android:textColor="@color/black"
+                android:textSize="35dp" />
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rl_header_doctor_appointment"
+            android:layout_marginBottom="30dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_header_date_time_doctor_appointment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_header_doctor_appointment"
+                android:layout_margin="20dp"
+                android:drawableLeft="@drawable/ic_calender"
+                android:text="  Date and Time"
+                android:textColor="@color/colorText"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_below="@id/tv_header_date_time_doctor_appointment"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/tv_date_doctor_appointment_fragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:text="11/26/20"
+                    android:textAlignment="center"
+                    android:drawablePadding="5dp"
+                    android:drawableRight="@drawable/ic_baseline_edit_24"
+                    android:textColor="@color/colorPrimaryLight">
+                </TextView>
+                <TextView
+                    android:id="@+id/tv_time_doctor_appointment_fragment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:text="09:31 AM"
+                    android:textAlignment="center"
+                    android:drawablePadding="5dp"
+                    android:drawableRight="@drawable/ic_baseline_edit_24"
+
+                    android:textColor="@color/colorPrimaryLight">
+                </TextView>
+
+            </LinearLayout>
+
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:hint="Appointment Type"
+                app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconMode="custom">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:hint="Appointment State"
+                app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconMode="custom">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:hint="Treatment Provider"
+                app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconMode="custom">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:hint="Doctor"
+                app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconMode="custom">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:hint="Specialization"
+                app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidth="2dp"
+                app:endIconDrawable="@drawable/ic_baseline_search_24"
+                app:endIconMode="custom">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="25dp"
+                android:layout_marginVertical="10dp"
+                android:hint="Note"
+                app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
+                app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
+                app:boxStrokeColor="@color/black"
+                app:boxStrokeWidth="2dp">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
 
 
 
 
-</FrameLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="25dp"
+                android:text="Diagnosis"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                android:gravity="center_horizontal|top"
+                app:strokeWidth="0dp"
+                android:layout_marginHorizontal="25dp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="25dp"
+
+                android:text="Symptoms"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                android:gravity="center_horizontal|top"
+                app:strokeWidth="0dp"
+                android:layout_marginHorizontal="25dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_margin="25dp"
+
+                android:layout_height="wrap_content"
+                android:text="Attach image"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                android:gravity="center_horizontal|top"
+                app:strokeWidth="0dp"
+                android:layout_marginHorizontal="25dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_margin="25dp"
+
+                android:layout_height="wrap_content"
+                android:text="or attach file of other format" />
+
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
+
+</ScrollView>
+
+
+<!--
+
+
+
+-->
