--- a/app/src/main/res/layout/fragment_disease.xml
+++ b/app/src/main/res/layout/fragment_disease.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -33,11 +34,116 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/rl_header_disease_fragment"
             android:orientation="vertical">
+
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="25dp"
+                android:text="Disease date period"
+                android:textColor="@color/colorText"
+                android:textSize="15dp">
 
             </TextView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:gravity="center_horizontal|top"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                app:strokeWidth="0dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:text="Your Symptoms"
+                android:textColor="@color/colorText"
+                android:textSize="15dp">
+
+            </TextView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:gravity="center_horizontal|top"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                app:strokeWidth="0dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="20dp"
+                android:text="Diagnosis"
+                android:textColor="@color/colorText"
+                android:textSize="15dp">
+
+            </TextView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:gravity="center_horizontal|top"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                app:strokeWidth="0dp" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:text="Notes"
+                android:textColor="@color/colorText"
+                android:textSize="15dp">
+            </TextView>
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginRight="25dp"
+                android:hint="Place your comment here">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginTop="15dp"
+                android:text="Attach Your Image"
+                android:textColor="@color/colorText"
+                android:textSize="15dp">
+
+            </TextView>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="40dp"
+                android:drawableBottom="@drawable/ic_baseline_add_24"
+                android:gravity="center_horizontal|top"
+                android:paddingBottom="25dp"
+                app:backgroundTint="@color/colorPrimaryLight"
+                app:cornerRadius="25dp"
+                app:strokeWidth="0dp" />
+
+
+
 
 
         </LinearLayout>
