--- a/app/src/main/res/layout/fragment_doctor_appointment.xml
+++ b/app/src/main/res/layout/fragment_doctor_appointment.xml
@@ -82,7 +82,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="25dp"
@@ -93,35 +93,35 @@
                 app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
                 app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
                 app:boxStrokeColor="@color/black"
-                app:boxStrokeWidth="2dp"
-                app:endIconDrawable="@drawable/ic_baseline_search_24"
-                app:endIconMode="custom">
+                app:boxStrokeWidth="2dp">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
+                    android:id="@+id/actv_appointment_type"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="none"/>
             </com.google.android.material.textfield.TextInputLayout>
-
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginVertical="10dp"
-                android:hint="Appointment State"
+                android:hint="@string/appointment_state"
                 app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
                 app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
                 app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
                 app:boxCornerRadiusTopStart="@dimen/edit_text_corner_radius"
                 app:boxStrokeColor="@color/black"
-                app:boxStrokeWidth="2dp"
-                app:endIconDrawable="@drawable/ic_baseline_search_24"
-                app:endIconMode="custom">
+                app:boxStrokeWidth="2dp">
 
-                <com.google.android.material.textfield.TextInputEditText
+                <AutoCompleteTextView
+                    android:id="@+id/actv_appointment_state"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="none"/>
             </com.google.android.material.textfield.TextInputLayout>
+
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
