--- a/app/src/main/res/layout/fragment_blood_pressure.xml
+++ b/app/src/main/res/layout/fragment_blood_pressure.xml
@@ -81,6 +81,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_weight="10"
                 android:layout_marginVertical="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -88,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/til_course_details"
-                    android:layout_weight="4"
+                    android:layout_weight="9"
                     android:hint="Upper Bound"
                     app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
@@ -103,13 +104,11 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/til_course_details"
-
+                    android:hint="Units"
                     android:layout_weight="1"
-                    android:hint="units"
                     app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
@@ -117,23 +116,27 @@
                     app:boxStrokeColor="@color/black"
                     app:boxStrokeWidth="2dp">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <AutoCompleteTextView
+                        android:id="@+id/actv_upper_bound_units"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:inputType="none"/>
                 </com.google.android.material.textfield.TextInputLayout>
-            </LinearLayout>
+
+              </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:weightSum="10"
                 android:layout_marginVertical="10dp">
 
                 <com.google.android.material.textfield.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="9"
                     android:hint="Lower Bound"
                     app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
@@ -148,12 +151,11 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
+                    android:hint="Units"
                     android:layout_weight="1"
-                    android:hint="units"
                     app:boxCornerRadiusBottomEnd="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusBottomStart="@dimen/edit_text_corner_radius"
                     app:boxCornerRadiusTopEnd="@dimen/edit_text_corner_radius"
@@ -161,10 +163,13 @@
                     app:boxStrokeColor="@color/black"
                     app:boxStrokeWidth="2dp">
 
-                    <com.google.android.material.textfield.TextInputEditText
+                    <AutoCompleteTextView
+                        android:id="@+id/actv_lower_bound_units"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:inputType="none"/>
                 </com.google.android.material.textfield.TextInputLayout>
+
             </LinearLayout>
 
             <LinearLayout
