--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,7 +110,8 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#00FFFFFF"
-                android:src="@drawable/ic_symptom_diagonosis" />
+                android:src="@drawable/ic_symptom_diagonosis"
+                android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
 
